# otus-cpp-04

./: .travis.yml  CMakeLists.txt  Doxyfile.in  README.md  annotated.html  annotated_dup.js  bintray.json  classes.html  dir_bfccd401955b95cf8c75461437045ac0.html  files.html  files.js  globals.html  globals_func.html  globals_vars.html  graph_legend.html  helpers_8h.html  helpers_8h.js  helpers_8h__dep__incl.map  helpers_8h__dep__incl.md5  helpers_8h__incl.md5  helpers_8h_a5622c457504838c1c7892f27761f9d4c_cgraph.map  helpers_8h_a5622c457504838c1c7892f27761f9d4c_cgraph.md5  helpers_8h_aa851866be85df57ce29851aa814c6385_icgraph.map  helpers_8h_aa851866be85df57ce29851aa814c6385_icgraph.md5  helpers_8h_adf62efa57ad54e6e2fd5eb4e75448158_cgraph.map  helpers_8h_adf62efa57ad54e6e2fd5eb4e75448158_cgraph.md5  helpers_8h_adf62efa57ad54e6e2fd5eb4e75448158_icgraph.map  helpers_8h_adf62efa57ad54e6e2fd5eb4e75448158_icgraph.md5  helpers_8h_af3aa4d42a0786fb2a7131bb788936709_cgraph.map  helpers_8h_af3aa4d42a0786fb2a7131bb788936709_cgraph.md5  helpers_8h_source.html  hierarchy.html  hierarchy.js  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  inherits.html  mainpage_8dox.html  (+35 more)
inc/: helpers.h  mainpage.dox  print_ip.h  traits.h
search/: all_1.js  all_3.js  all_4.js  classes_0.js  functions_0.js  functions_1.js  searchdata.js  variables_0.js
src/: main.cpp
test/: test.cpp  test_static_asserts.cpp
